Minor changes to documentation

--- a/user_manual/hooper_report.tex
+++ b/user_manual/hooper_report.tex
@@ -18,8 +18,8 @@
 \setlength{\parskip}{1em}
 
 \title{\textbf{Insurance annuity calculator in R} \\ User Manual}
-\author{Brian Hooper, Heather McKinnon, Kalla Divya Chandrika  \\ Central Washington University}
-\date{Last Updated: January 29th, 2019}
+\author{Brian Hooper, Heather McKinnon, Divya Kalla Chandrika  \\ Central Washington University}
+\date{January 29th, 2019}
 
 \begin{document}
 	\maketitle
