Minor changes to user manual

--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -95,6 +95,6 @@ Finally, table \ref{roi} shows an example \textit{ROI\_input.csv} file. The numb
 
 \section{Use}
 
-To invoke the program, simply use the Rscript command from the directory containing the \textit{input.csv} and \textit{mortality.csv} files. The program will output a report and a set of tables containing the expected profit or loss to the company based on the simulated business block. Plots and output will be placed in the \textit{output} folder, with a single subfolder for each row in the input file. 
+To run the program, simply use the \textit{source} command from within Rstudio. It may be necessary to first set the working directory to the directory containing the \textit{input.csv} files using either the \textit{setwd} command or using \textit{Session $\rightarrow$ Set working directory $\rightarrow$ to source file location}. The program will output a report and a set of tables containing the expected profit or loss to the company based on the simulated business block. Plots and output will be placed in the \textit{output} folder, with a single subfolder for each row in the input file. 
 
 \end{document}
