--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -28,7 +28,7 @@
 	This document describes the use and function of the \textit{Annuity calculator} written in R. The program is intended to simulate 10,000 independent customers purchasing an annuities using a mortality table. An input file provided to the program will give a initial age range that will be used to randomly select a starting age, or the age that the person will purchase an annuity product. Then, the mortality table will be used to randomly select a death age based on the distribution provided by the mortality table. This can be used to calculate the amount of profit or loss for the insurance company for an individual annuity product.
 	
 	\section{Input}
-	Three auxiliary comma-separated files are required to use the script: \textit{input.csv}, \textit{ROI\_input.csv}, and \textit{mortality.csv}. The \textit{input.csv} contains the following input parameters that should be provided to the script, shown in table \ref{description}: 
+	Three auxiliary comma-separated-value files are required to use the script: \textit{input.csv}, \textit{ROI\_input.csv}, and \textit{mortality.csv}. The \textit{input.csv} contains the following input parameters that should be provided to the script, shown in Table \ref{tbl:description}: 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{|l|l|}
@@ -41,18 +41,18 @@
 		term\_length & The number of terms for N-year annuities \\ \hline
 		iterations & The number of simulations to run \\ \hline
 	\end{tabular}
-	\label{description}
 	\caption{Input parameter descriptions}
+	\label{tbl:description}
 \end{table}
 
-Note that column headers input\_start\_age, input\_age\_end, etc are required for the script to function correctly. Each row of the input column will represent a single simulation. An example \textit{input.csv} file is shown in table \ref{example}. In this case, the program will simulate a group of 100 individuals, aged 25 to 40, purchasing a \$1000 annuity benefit that matures at age 60. 
+Note that column headers input\_start\_age, input\_age\_end, etc are required for the script to function correctly. Each row of the input column will represent a single simulation. An example \textit{input.csv} file is shown in Table \ref{example}. In this case, the program will simulate a group of 100 individuals, aged 25 to 40, purchasing a \$1000 annuity benefit that matures at age 60. 
 
 
 
 \begin{table}[H]
 	\begin{adjustwidth}{-.5in}{-.5in}  
 		\footnotesize{
-		\begin{tabular}{|l|l|l|l|l|l|l|}
+		\begin{tabular}{|c|c|c|c|c|c|c|}
 			\hline
 			\textbf{input\_age\_start} & \textbf{input\_age\_end} & \textbf{maturity\_age} & \textbf{monthly\_annuity} & \textbf{interest\_rate} & \textbf{term\_length} & \textbf{iterations} \\ \hline
 			25 & 40 & 60 & 1000 & 0.05 & 20 & 100 \\ \hline
@@ -63,11 +63,11 @@ Note that column headers input\_start\_age, input\_age\_end, etc are required fo
 	\end{adjustwidth}
 \end{table}
 
-The \textit{mortality.csv} file should contain two columns: an \textit{age} column containing a list of integer ages, and a \textit{mortality} column containing the probability of death at each age. An example \textit{mortality.csv} file is given in table \ref{mortality}. 
+The \textit{mortality.csv} file should contain two columns: an \textit{age} column containing a list of integer ages, and a \textit{mortality} column containing the probability of death at each age. An example \textit{mortality.csv} file is given in Table \ref{mortality}. 
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|l|l|}
+	\begin{tabular}{|c|c|}
 		\hline
 		Age & Mortality \\ \hline
 		0 & 0.02042 \\ \hline
@@ -80,11 +80,11 @@ The \textit{mortality.csv} file should contain two columns: an \textit{age} colu
 	\label{mortality}
 \end{table}
 
-Finally, table \ref{roi} shows an example \textit{ROI\_input.csv} file. The number of rows in this file should not exceed the number of rows in the  \textit{input.csv} file. However, if the number of rows is less than the  \textit{input.csv} file, the last row of the ROI file will be used for all subsequent simulations. 
+Finally, Table \ref{roi} shows an example \textit{ROI\_input.csv} file. The number of rows in this file should not exceed the number of rows in the  \textit{input.csv} file. However, if the number of rows is less than the  \textit{input.csv} file, the last row of the ROI file will be used for all subsequent simulations. 
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|l|l|l|l|}
+	\begin{tabular}{|c|c|c|c|}
 		\hline
 		\textbf{company\_years} & \textbf{ROI\_interest} & \textbf{investment\_percent} & \textbf{policy\_sales\_goal} \\ \hline
 		75 & 0.05 & 0.25 & 100 \\ \hline
@@ -95,6 +95,6 @@ Finally, table \ref{roi} shows an example \textit{ROI\_input.csv} file. The numb
 
 \section{Use}
 
-To run the program, simply use the \textit{source} command from within Rstudio. It may be necessary to first set the working directory to the directory containing the \textit{input.csv} files using either the \textit{setwd} command or using \textit{Session $\rightarrow$ Set working directory $\rightarrow$ to source file location}. The program will output a report and a set of tables containing the expected profit or loss to the company based on the simulated business block. Plots and output will be placed in the \textit{output} folder, with a single subfolder for each row in the input file. 
+To run the program, simply use the \textit{source} command from within RStudio, or another R interface running R version 3.5.1 or greater. It may be necessary to first set the working directory to the directory containing the \textit{input.csv} files using either the \textit{setwd()} command or using \textit{Session $\rightarrow$ Set working directory $\rightarrow$ to source file location}. The program will output a report and a set of tables containing the expected profit or loss to the company based on the simulated business block. Plots and output will be placed in the \textit{output} folder, with a single subfolder for each row in the input file. 
 
 \end{document}
